--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       });
     </script>
     <!-- /Yandex.Metrika counter -->
-    <meta name="mailru-domain" content="8yMX0F3U6fOirsmG" />
+    <meta name="mailru-domain" content="DxPRQVkTwnIgj8v0" />
   </head>
   <body>
     <noscript><div><img src="https://mc.yandex.ru/watch/30851821" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
