--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,28 @@
     </script>
     <!-- /Yandex.Metrika counter -->
     <meta name="mailru-domain" content="DxPRQVkTwnIgj8v0" />
+    <!-- Chatra {literal} -->
+    <script>
+      (function(d, w, c) {
+        w.ChatraID = 'zQWj769ZnZ8o9793E';
+        var s = d.createElement('script');
+        w[c] = w[c] || function() {
+          (w[c].q = w[c].q || []).push(arguments);
+        };
+        s.async = true;
+        s.src = 'https://call.chatra.io/chatra.js';
+        if (d.head) d.head.appendChild(s);
+      })(document, window, 'Chatra');
+    </script>
+    <script>
+      window.ChatraSetup = {
+        colors: {
+          buttonText: '#f0f0f0', /* цвет текста кнопки чата */
+          buttonBg: '#a749ff'    /* цвет фона кнопки чата */
+        }
+      };
+    </script>
+    <!-- /Chatra {/literal} -->
   </head>
   <body>
     <noscript><div><img src="https://mc.yandex.ru/watch/30851821" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
